2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Kill WebKitApplyingScripts
        https://bugs.webkit.org/show_bug.cgi?id=32467

        Ah!  I've been wanting to do this for a long time.  This patch brings
        the applying commands into the patch processing fold.

        * Scripts/bugzilla-tool:
        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/download_unittest.py:
        * Scripts/modules/mock_bugzillatool.py:

2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Convert rollout to StepSequence
        https://bugs.webkit.org/show_bug.cgi?id=32406

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/download_unittest.py:
        * Scripts/modules/mock_bugzillatool.py:

2009-12-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Kill LandingSequence
        https://bugs.webkit.org/show_bug.cgi?id=32464

        Removes LandingSequence in favor of StepSequence.  This required
        changing the Step API slightly to carry a general notion of state
        instead of carrying patches specifically.

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/queues.py:
        * Scripts/modules/landingsequence.py: Removed.
        * Scripts/modules/stepsequence.py:

2009-12-14  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Eric Seidel.

        [Qt] Fix https://bugs.webkit.org/show_bug.cgi?id=32437
        
        Amend the behaviour of DRT::notifyDone to dump only when
        the page has finished loading.
        
        This fix permits removal of the following tests from the Qt skipped list:
        fast/forms/textarea-linewrap-dynamic.html
        fast/forms/textarea-setvalue-submit.html