@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] Add AbstractPatchSequencingCommand to remove redundant code
+        https://bugs.webkit.org/show_bug.cgi?id=32468
+
+        Redundant code is bad.  This patch moves us towards more declarative
+        commands.
+
+        * Scripts/modules/commands/download.py:
+
+2009-12-14  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         [bzt] Kill WebKitApplyingScripts
         https://bugs.webkit.org/show_bug.cgi?id=32467
 
